[metadata]
name = handystats
version = attr: handystats.__version__
author = Anthony Monthe
author-email = anthony@cloud-mercato.com
url = https://github.com/cloudmercato/handystats
project_urls = 
summary = Handy library for make stats quickly
description-file = file: README.rst
long_description = file: README.rst
description-content-type = text/x-rst; charset=UTF-8
license = MIT

requires-dist =
    setuptools

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

keywords = math

[bdist_wheel]
universal = 1

[options]
pymodule=handystats
zip_safe = False
include_package_data = True
install_requires =
test_suite = tests
tests_require =

[coverage:run]
branch = True
source = .

[coverage:report]
show_missing = true
exclude_lines =
    noqa
    NotImplemented
